bg and scalable

--- a/index.html
+++ b/index.html
@@ -2,56 +2,25 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0,  user-scalable=yes">
     <link rel="stylesheet" href="style.css" />
     <title>Img Static</title>
   </head>
   <body>
     <section id="rs-module" class="rs-module">
 
-
-<!-- 
-      <div class="dot-men-shoes">
-        <div class="dot">
-          <div class="dot-center"></div>
-        </div>
-      </div>
-
-      <div class="dialog">
-        <div class="box">Dialog for dot 1</div>
-        <div class="chule-direction"></div>
-      </div>
-
-      <div class="dot-men-t-shirt">
-        <div class="dot">
-          <div class="dot-center"></div>
-        </div>
-      </div>
-
-      <div class="dialog-t-shirt">
-        <div class="box">Dialog for dot 2</div>
-        <div class="chule-direction"></div>
-      </div> -->
-
-      
-
       <img
         id="slider-1"
         class="slider"
         src="./img/tiendas-de-ropa.jpg"
-        alt="Dos robots"
-      >
-
-    </img>
-
-    <!-- <div id="points-container" class="points-container"></div> -->
+        alt="Tienda de ropa"
+      ></img>
 
     </section>
 
-    <script src="./script/automaticCenterScrooll.js">  </script>
     <script src="./script/getDotPositions.js">  </script>
-    <script src="./script/psoiciondeClick.js"></script>
-
+    <script src="./script/center.js">  </script>
+    <script src="./script/positionClickListener.js"></script>
 
   </body>
 </html>
