Integrate with the true store products

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Img Static</title>
   </head>
   <body>
-    <section class="menu" id="menu">
-
+    
+    <section class="menu" id="menu" style="display: none;">
       <button class="menuItemButton" > 
         <div class="contenedor-texto">
           Este es una opcion.
