Animations to menu buttons options elements

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     
     <section class="menu" id="menu" style="display: none;">
-      <button class="menuItemButton" > 
+
+      <button class="menuItemButton"  id="menuItemButton1"> 
         <div class="contenedor-texto">
           Este es una opcion.
         </div>
       </button>
 
       <button class="menuItemButton" > 
-        <div class="contenedor-texto">
+        <div class="contenedor-texto" id="menuItemButton2">
           Este es otra opcion.
         </div>
       </button>
