--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <header class="header" id="headerInitial" >
     </header>
 
-    <a href="/" class=" logo-mobile "  >LEGEND GANG</a>
+    <a href="/" class=" logo-mobile "  >
+  
+      <img src="https://cdn.shopify.com/s/files/1/0765/8242/0785/files/Group_80logo.png?v=1722446570" alt="legend gand Logo">
+    </a>
 
 
     <section class="menu" id="menu" style="display: none;">
@@ -47,8 +50,14 @@
     </script>
     <script src="./script/header.js"></script>
     <script src="./script/getDotPositions.js"> </script>
+    <script > 
+      var inicialPositionSection = 3;
+      var inicialPositionSectionTop = 2;
+
+    </script>
     <script src="./script/center.js"></script>
     <script src="./script/positionClickListener.js"></script>
+
     <script src="./script/menu.js"></script> 
     <script src="./script/getHeader.js"></script>
     
