--- a/index.html
+++ b/index.html
@@ -2,65 +2,86 @@
 
 <html lang="es">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0,  user-scalable=yes">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="index-header.css" />
-    <title>Img Static</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0,  user-scalable=yes">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index-header.css" />
+  <title>Img Static</title>
+</head>
 
 
 
-  <body>
+<body>
 
-    <header class="header" id="headerInitial" >
-    </header>
-
-    <a href="/" class=" logo-mobile "  >
-  
-      <img src="https://cdn.shopify.com/s/files/1/0765/8242/0785/files/Group_80logo.png?v=1722446570" alt="legend gand Logo">
-    </a>
+  <header class="header" id="headerInitial">
+  </header>
 
 
-    <section class="menu" id="menu" style="display: none;">
-
-    </section>
-
-
-    <section class="pagebuttons" id="pagebuttons">
-    </section>
-
-    <button class=" buttonMenu" id="buttonMenu" onclick="showMenu()"  >
-      menu 
-    </button> 
    
-    <section id="rs-module" class="rs-module">
-      <img
-        id="slider-1"
-        class="slider"
-        src="./img/tiendas-de-ropa.jpg"
-        alt="Tienda de ropa"
-      ></img>
-    </section>
+  <!-- <div class="button b2" id="button-11" style="position: absolute; z-index: 1200; ">
+    <input type="checkbox" class="checkbox" />
+    <div class="knobs">
+      <span></span>
+    </div>
+    <div class="layer"></div>
+  </div> -->
+<main>
+  <div class="button r" id="button-1" style="position: absolute; z-index: 1200; ">
+    <input type="checkbox" class="checkbox" id="languageToggle" />
+    <div class="knobs"></div>
+    <div class="layer"></div>
+  </div>
 
-    <script>
-      var imgH = 4034;
-      var imgW = 3024;
-    </script>
-    <script src="./script/header.js"></script>
-    <script src="./script/getDotPositions.js"> </script>
-    <script > 
-      var inicialPositionSection = 3;
-      var inicialPositionSectionTop = 2;
 
-    </script>
-    <script src="./script/center.js"></script>
-    <script src="./script/positionClickListener.js"></script>
 
-    <script src="./script/menu.js"></script> 
-    <script src="./script/getHeader.js"></script>
-    
-  </body>
+
+  <a href="/" class=" logo-mobile ">
+
+    <img src="https://cdn.shopify.com/s/files/1/0765/8242/0785/files/Group_80logo.png?v=1722446570"
+      alt="legend gand Logo">
+  </a>
+
+
+  <section class="menu" id="menu" style="display: none;">
+
+  </section>
+
+
+  <section class="pagebuttons" id="pagebuttons">
+  </section>
+
+  <button class=" buttonMenu" id="buttonMenu" onclick="showMenu()">
+    menu
+  </button>
+
+
+
+  <section id="rs-module" class="rs-module">
+    <img id="slider-1" class="slider" src="./img/tiendas-de-ropa.jpg" alt="Tienda de ropa"></img>
+  </section>
+
+  <script>
+    var imgH = 4034;
+    var imgW = 3024;
+  </script>
+  <script src="./script/header.js"></script>
+  <script src="./script/getDotPositions.js"> </script>
+  <script>
+    var inicialPositionSection = 3;
+    var inicialPositionSectionTop = 2;
+
+  </script>
+  <script src="./script/center.js"></script>
+  <!-- <script src="./script/positionClickListener.js"></script> -->
+
+  <script src="./script/menu.js"></script>
+  <script src="./script/getHeader.js"></script>
+  <script src="./script/translate.js"></script>
+</main>
+<footer>
   
+</footer>
+</body>
+
 </html>
