--- a/index.html
+++ b/index.html
@@ -17,23 +17,12 @@
   <header class="header" id="headerInitial">
   </header>
 
-
-   
-  <!-- <div class="button b2" id="button-11" style="position: absolute; z-index: 1200; ">
-    <input type="checkbox" class="checkbox" />
-    <div class="knobs">
-      <span></span>
-    </div>
-    <div class="layer"></div>
-  </div> -->
 <main>
   <div class="button r" id="button-1" style="position: absolute; z-index: 1200; ">
-    <input type="checkbox" class="checkbox" id="languageToggle" />
+    <input type="checkbox" class="checkbox" id="languageToggle" style="width: 100%;" />
     <div class="knobs"></div>
     <div class="layer"></div>
   </div>
-
-
 
 
   <a href="/" class=" logo-mobile ">
