uptates finish fase

--- a/moreSwears.html
+++ b/moreSwears.html
@@ -11,7 +11,6 @@
   </head>
 
 
-
   <body>
 
     <header class="header" id="headerInitial" >
@@ -39,7 +38,7 @@
       <img
         id="slider-1"
         class="slider"
-        src="./img/moreSwears.jpg"
+        src="img/moreSwears.jpg"
         alt="Tienda de ropa"
       ></img>
     </section>
