--- a/shopifyPruebas-.html
+++ b/shopifyPruebas-.html
@@ -35,15 +35,9 @@
 
     <section id="rs-module" class="rs-module">
         <img id="slider-1" class="slider"
-            src="https://cdn.shopify.com/s/files/1/0765/8242/0785/files/shirt-pants-store-poins.jpg?v=1722140298"
+            src="https://cdn.shopify.com/s/files/1/0765/8242/0785/files/baner-principal-tienda.jpg?v=1722008674"
             alt="Tienda de ropa" />
     </section>
-
-    <script > 
-      var inicialPositionSection = 1.8;
-      var inicialPositionSectionTop = 2;
-
-    </script>
 
     <script src="{{ 'dots-translate.js '| asset_url }}" defer="defer"></script>
 
@@ -53,12 +47,17 @@
 
 
     <script>
-        var jsonFilePath = '{{ "dots-moreSwears.json" | asset_url }}';
+        var jsonFilePath = '{{ " dots-principal.json" | asset_url }}';
+    </script>
+
+    <script > 
+      var inicialPositionSection = 3;
+      var inicialPositionSectionTop = 2;
     </script>
 
     <script src="{{'dots-store-center.js' | asset_url }} " defer="defer"></script>
 
-    <script src="{{'dots-store-getDotPositions.js' | asset_url }} " defer="defer"></script>
+    <script src="{{'dots-store-getDotPositions.js' | asset_url }} " defer="defer"> </script>
 
     <script src="{{'dots-store-header.js' | asset_url }} " defer="defer"></script>
 
